# bootcamp-python

aula-01/: desafio-01.py
aula-02/: bonus-21.py  bonus-22.py  bonus-23.py  bonus-24.py  bonus-25.py  desafio-02.py
aula-03/: desafio-03.py
aula-04-One-Billion-Row-Challenge-Python/: README.md  pyproject.toml
aula-04-One-Billion-Row-Challenge-Python/src/: using_dask.py  using_duckdb.py  using_pandas.py  using_polars.py
aula-07/: main.py
aula-11a15/: README.md  gerador_data.py  main.py  pyproject.toml
aula-11a15/data/: clientes.csv  produtos.csv  transacoes.csv
