[project]
name = "dados-ecommerce"
version = "3.13.2"
description = "Projeto criado a partir do Deepseek. Para praticar do básico à classes"
authors = [
    {name = "Lenon Torma",email = "lenoncastro18@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "faker (>=37.1.0,<38.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
